fix links page, text align issue

--- a/src/views/page/style.module.scss
+++ b/src/views/page/style.module.scss
@@ -109,6 +109,7 @@
     padding-left: 1rem;
   }
   li {
+    text-align: left;
     margin-top: .5rem;
     margin-bottom: .5rem;
     &:first-child {
